package Modelo;

public interface IQueryDatos {    
    // Permite hacer una consulta a la BBDD
    String queryDatos(String datoBuscado, String tabla, String codigo);
}
