package Modelo;

/**
 *
 * @author Gianny
 */
public interface IQueryEliminar {
    boolean eliminarElemento(String codigo);
    String obtenerTabla();
}
